# qq-bot-merchant-broadcast

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/plugins/merchant/: __init__.py  config.py  parser.py  scheduler.py  spider.py
