[project]
name = "qq-bot-merchant-broadcast"
version = "1.0.0"
description = "QQ机器人 - 远行商人道具播报（基于NoneBot2）"
requires-python = ">=3.10"
dependencies = [
    "nonebot2>=2.3.0",
    "nonebot-adapter-onebot>=2.4.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
]

[tool.nonebot]
plugins = ["src.plugins.merchant"]
plugin_dirs = []
builtin_plugins = ["echo"]
